--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                         <div class="courses u-mt-30">
                             <form class="courses-form form">
                                 <div>
-                                    <select v-model="priceSelector">
+                                    <select v-model="priceSelector" style="">
                                         <option value="price">Цена в рублях</option>
                                         <option value="priceBonus">Цена в бонусах</option>
                                     </select>
-                                </div>
+                                </div><div></div>
                             </form>
                         </div>
                         <h1 class="u-text-center" id="InfoH1" style="display:none"></h1>
