fix price selector position

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                         <option value="price">Цена в рублях</option>
                                         <option value="priceBonus">Цена в бонусах</option>
                                     </select>
-                                </div><div></div>
+                                </div><div>&nbsp;</div>
                             </form>
                         </div>
                         <h1 class="u-text-center" id="InfoH1" style="display:none"></h1>
